<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="hello">Welcome to the factory mode</string>
    <string name="app_name">Factory mode</string>
    <string name="Settings">Settings</string>
    <string name="AutoTest">AutoTest</string>
    <string name="AllTest">AllTest</string>
    <string name="Packageerror">Wrong, cannot find the packages!</string>
    <string name="PackageIerror">Internal error</string>
    <string name="BatteryLog">Power</string>
    <string name="battery_info_status_label">Charging status:</string>
    <string name="battery_info_scale_label">Battery:</string>
    <string name="battery_info_level_label">Current electricity:</string>
    <string name="battery_info_health_label">Power supply condition:</string>
    <string name="battery_info_technology_label">Power technology:</string>
    <string name="battery_info_voltage_label">Current voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Power supply temperature:</string>
    <string name="battery_info_charging_label">Power supply current:</string>
    <string name="battery_info_temperature_units">\u00B0 C</string>
    <string name="battery_info_cpu_temperature_label">CPU temperature:</string>
    <string name="battery_info_uptime">Battery up time:</string>
    <string name="battery_info_awake_battery">Battery wake up time: </string>
    <string name="battery_info_awake_plugged">Charging time:</string>
    <string name="battery_info_screen_on">Screen on time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="TouchScreen">Touch screen</string>
    <string name="PointTest">Point test</string>
    <string name="LineTest">Line test</string>
    <string name="Result">View the results</string>
    <string name="Offset">Offset:</string>
    <string name="TouchComplete">Test completed</string>
    <string name="Error">Failure</string>
    <string name="DrawError">Draw Error!</string>
    <string name="Again">Try again</string>
    <string name="GoOn">Go on</string>
    <string name="TouchScreen_HandWriting">Touch screen handwriting</string>
    <string name="TouchScreen_Verification">Touch screen verify</string>
    <string name="TouchScreen_VerificationPoint">Touch screen calibration point</string>
    <string name="TouchScreen_VerificationLine">Touch screen calibration line</string>
    <string name="TouchScreen_VerificationShaking">Touch screen calibration shock</string>
    <string name="TouchScreen_MultiTouch">Touch screen multi-touch</string>
    <string name="TouchScreen_Settings_TextValue">Value</string>
    <string name="TouchScreen_Settings_TextSpinner">Categories</string>
    <string name="TouchScreen_Settings_TextSet">Settings</string>
    <string name="TouchScreen_Settings">Settings</string>
    <string name="TouchScreen_Settings_Value">0</string>
    <string name="TouchScreen_Settings_sdcard">Close</string>
    <string name="TouchScreen_Settings_uart">Close</string>
    <string name="TouchScreen_Settings_TextUart">Open the Uart logs</string>
    <string name="TouchScreen_Settings_TextSDcard">Open the SD card log</string>
    <string name="TouchScreen_RateReport">Report</string>
    <string name="BackLight">BackLight</string>
    <string name="Display_lcd_Text">Background light</string>
    <string name="Memory">Memory</string>
    <string name="Audio">Sound</string>
    <string name="Camera">Camera</string>
    <string name="Camera_takepic">Capture</string>
    <string name="Camera_retake">Recapture</string>
    <string name="Camera_notfound">Front-camera not detected</string>
    <string name="WiFi">WiFi</string>
    <string name="WiFi_success">Test success</string>
    <string name="WiFi_failed">Test failure</string>
    <string name="WiFi_scaning">Scaning...</string>
    <string name="WiFi_info_closeing">wifi is closing...</string>
    <string name="WiFi_info_close">wifi has been closed</string>
    <string name="WiFi_info_opening">wifi are opening</string>
    <string name="WiFi_info_open">wifi already open</string>
    <string name="WiFi_info_unknown">Unknown</string>
    <string name="WiFi_connecting">wifi are connecting...</string>
    <string name="WiFi_notfound_openap">Not found open wifi access</string>
    <string name="WiFi_mac_address">WLAN MAC address</string>
    <string name="WiFi_item_name">name</string>
    <string name="WiFi_item_mac">Address</string>
    <string name="WiFi_item_level">Level</string>
    <string name="wait">Please wait ...</string>
    <string name="discovery">Search</string>
    <string name="Wifi_open">Open Wifi</string>
    <string name="HeadSet">Headphone</string>
    <string name="HeadSet_plugged">Headphone insert</string>
    <string name="HeadSet_unplugged">Headphone out</string>
    <string name="HeadSet_tips">Please insert the headphones test</string>
    <string name="HeadSet_remove">Please remove headset</string>
    <string name="HeadSet_hook">Hook button press on the headphone!</string>
    <string name="HeadSet_hook_message">Please make sure the call duration can press the headphone Hook hang up?</string>
    <string name="GPS">GPS</string>
    <string name="GPS1">GPS1</string>
    <string name="GPS2">GPS2</string>
    <string name="GPS_open">Please open GPS</string>
    <string name="GPS_connect">GPS has opened, connecting...</string>
    <string name="GPS_normal">GPS ok</string>
    <string name="GPS_satelliteNum">search satellite GPS number:</string>
    <string name="GPS_Signal">GPS signals:</string>
    <string name="GPS_Success">Success</string>
    <string name="GPS_Fail">Fail</string>
    <string name="GPS_time">Time-consuming: %s minutes</string>
    <string name="Sensor">Sensor</string>
    <string name="Vibrator">Vibrator</string>
    <string name="Rgb_led">RGB Led</string>
    <string name="kpd_light_name">kpd led</string>
    <string name="Signal">Call</string>
    <string name="YGPS">YGPS</string>
    <string name="AGPS">AGPS</string>
    <string name="Microphone">Microphone</string>
    <string name="double_microphone">"Two Microphone"</string>
    <string name="microphone1">"Microphone1"</string>
    <string name="microphone2">"Microphone2"</string>
    <string name="Mic_start">Start recording</string>
    <string name="Mic_stop">Stop the recording and playback</string>
    <string name="Mic_play">Start playing</string>
    <string name="Mic_playing">Playing</string>
    <string name="Mic_operation">Mic option</string>
    <string name="Speaker_operation">Speaker option</string>
    <string name="Bluetooth">Bluetooth</string>
    <string name="Bluetooth_open">Bluetooth already open</string>
    <string name="Bluetooth_opening">Bluetooth is opening...</string>
    <string name="Bluetooth_scaning">Searching...</string>
    <string name="Bluetooth_closed">Bluetooth is closed</string>
    <string name="Bluetooth_mac">MAC address:</string>
    <string name="Bluetooth_mac_device">Native MAC address</string>
    <string name="Bluetooth_scan_success">Scan success</string>
    <string name="status_unavailable">Unavailable</string>
    <string name="Bluetooth_discovery">Discovery</string>
    <string name="GSensor">Gsensor Test2</string>
    <string name="GSensorWithCalibrate">Gsensor Test1</string>
    <string name="GSensor_info">Erect, flat, side stand, observe the gravity change!</string>
    <string name="GSensor_with_calibrate_info">Flat and observe the gravity change!</string>
    <string name="GSensor_with_calibrate">Calibrate</string>
    <string name="GSensor_with_calibrate_do_calibrate">Calibrating</string>
    <string name="GSensor_with_calibrate_result">Testing</string>
    <string name="GSensor_with_calibrate_retest">ReTest</string>
    <string name="GYSensor">GySensor</string>
    <string name="GYSensor_info">Rotating equipment to observe changes in value!</string>
    <string name="MSensor">MSensor</string>
    <string name="MSensor_default_text">Unknown data</string>
    <string name="MSensor_North">North</string>
    <string name="MSensor_East">East</string>
    <string name="MSensor_South">South</string>
    <string name="MSensor_West">West</string>
    <string name="MSensor_north_east">North by east</string>
    <string name="MSensor_south_east">South by east</string>
    <string name="MSensor_south_west">South by west</string>
    <string name="MSensor_north_west">North by west</string>
    <string name="LSensor">LSensor</string>
    <string name="LSensor_default_text">Unknown data</string>
    <string name="LSensor_accuracy">Accuracy:</string>
    <string name="LSensor_value">Calue:</string>
    <string name="LSensor_tips">Where light and dark the observation values change!</string>
    <string name="LCD_increase">Strong backlight</string>
    <string name="LCD_weaken">Weak backlight</string>
    <string name="BackLight_remind">Backlight flashing alternately</string>
    <string name="Success">Success</string>
    <string name="Failed">Failure</string>
    <string name="psensor_hello">PSensor validation</string>
    <string name="psensor_app_name">Distance sensor</string>
    <string name="proximity">Close to:</string>
    <string name="tips">Please place the hand and left the induction zone to watch the change in value!</string>
    <string name="calibrate">Calibration</string>
    <string name="Earphone">Receiver</string>
    <string name="battery_name">Power</string>
    <string name="touchscreen_name">Touch</string>
    <string name="speaker_name">Speaker</string>
    <string name="otg_speaker_name">Otg Speaker</string>
    <string name="wifi_name">WiFi</string>
    <string name="bluetooth_name">Bluetooth</string>
    <string name="headset_name">Headphone</string>
    <string name="earphone_name">Receiver</string>
    <string name="gps_name">GPS</string>
    <string name="gps1_name">GPS1</string>
    <string name="KeyCode_info2">Please press button to adjust the volume</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="service_call">Service Call</string>
    <string name="normal_call">Normal Call</string>
    <string name="isFlash">Get lamp when first into the flash?</string>
    <string name="device_system_info"> Motherboard information:</string>
    <string name="device_version_info">Software version:</string>
    <string name="device_meid_info">MEID number：</string>
    <string name="device_imei_info">IMEI number：</string>
    <string name="device_sn_info">SN number:</string>
    <string name="device_wifi_info">Wifi mac:</string>
    <string name="device_to_engineer_mode">click entry Engineer Mode</string>
    <string name="device_rf_info">RF calibration:</string>
    <string name="device_c2k_info">C2K calibration:</string>
    <string name="device_c2k_band">Band info:</string>
    <string name="device_c2k_band5_set">Band5 Set</string>
    <string name="openflashlight">open</string>
    <string name="closeflashlight">close</string>
    <string name="open">"open"</string>
    <string name="close">"close"</string>
    <string name="btn_mic1">"Mic1"</string>
    <string name="btn_mic2">"Mic2"</string>
    <string name="ok">OK</string>
</resources>