<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

     <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:text="@string/open"
            android:id="@+id/open_light_color"
            android:layout_width="wrap_content"
            android:layout_height="100dip"
            android:layout_weight="0.5" />
        <Button
            android:text="@string/close"
            android:id="@+id/close_light_color"
            android:layout_width="wrap_content"
            android:layout_height="100dip"
            android:layout_weight="0.5" />
    </LinearLayout>
    <Button
        android:id="@+id/color_light_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:textSize="25dip"
        android:text="@string/Success" />
    <Button
        android:id="@+id/color_light_failed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:textSize="25dip"
        android:text="@string/Failed" />
</LinearLayout>
