<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/emergency_call"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/emergency_call"
            style="@style/normal_bg_style"
            android:textSize="25dip" />

        <Button
            android:id="@+id/service_call"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/service_call"
            style="@style/normal_bg_style"
            android:textSize="25dip" />

        <Button
            android:id="@+id/normal_call"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/normal_call"
            style="@style/normal_bg_style"
            android:visibility="gone"
            android:textSize="25dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical" >

        <Button
            android:id="@+id/signal_bt_ok"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:text="@string/Success"
            style="@style/success_bg_style"
            android:textSize="25dip" />

        <Button
            android:id="@+id/signal_bt_failed"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:text="@string/Failed"
            style="@style/fail_bg_style"
            android:textSize="25dip" />
    </LinearLayout>

</LinearLayout>
