<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Display_lcd_on"
            style="@style/normal_bg_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:text="@string/LCD_increase" />

        <Button
            android:id="@+id/Display_lcd_off"
            style="@style/normal_bg_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/LCD_weaken" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/BackLight_remind"
            android:textSize="@dimen/item_text_big_content_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/display_bt_ok"
            style="@style/success_bg_style"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/Success" />

        <Button
            android:id="@+id/display_bt_failed"
            style="@style/fail_bg_style"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/Failed" />
    </LinearLayout>

</LinearLayout>