<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="6"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_mic1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="20dip"
            android:text="@string/btn_mic1"
            android:textSize="@dimen/item_text_big_content_size" />

        <TextView
            android:id="@+id/tv_mic2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="20dip"
            android:text="@string/btn_mic2"
            android:textSize="@dimen/item_text_big_content_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="4"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_ok"
            style="@style/success_bg_style"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/Success" />

        <Button
            android:id="@+id/button_fail"
            style="@style/fail_bg_style"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/Failed" />
    </LinearLayout>

</LinearLayout>