<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:gravity="center"
        android:layout_weight="7"
        android:textSize="30sp"
        android:text="@string/KeyCode_info2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/audio_bt_ok"
            style="@style/success_bg_style"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/Success" />

        <Button
            android:id="@+id/audio_bt_failed"
            style="@style/fail_bg_style"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/Failed" />
    </LinearLayout>

</LinearLayout>